<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="GVL" Id="{8dc09980-6647-480f-bcbf-14c60cf787e0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	data: ARRAY [1..MAX_CSV_ROWS] OF stRecordData := [(field01 := '1', field02 := '2', field03 := '3', field04 := '4', field05 := '5'), (field01 := '5', field02 := '4', field03 := '3', field04 := '2', field05 := '1'), 98(())];
	emptyData:stRecordData;
	recordFileNow, readFileNow: BOOL;
	readData:ARRAY[1..MAX_CSV_ROWS] OF stRecordData;
	sFileName: T_MaxString := 'C:/Relat/File.csv';
END_VAR
VAR_GLOBAL CONSTANT
	MAX_CSV_ROWS 			: UDINT := 100;
	MAX_CSV_COLUMNS 		: UDINT := 5;
	MAX_CSV_FIELD_LENGTH	: UDINT := 100;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>